--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="box2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, ut repellendus voluptate, aspernatur necessitatibus consequuntur harum doloremque dignissimos vero modi corporis cumque pariatur similique quibusdam, obcaecati enim provident veniam tenetur!
     
     </div>
-    <img src="download.jpg" height="300" >
+    <img src='./download.jpg' height='300' >
     <br>
     <div id="box3">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempor
